chore: add favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,135 @@
 			href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			type="image/png"
+			sizes="16x16"
+			rel="icon"
+			href="/src/assets/icons/icons8-anime-color-16.png"
+		/>
+		<link
+			type="image/png"
+			sizes="32x32"
+			rel="icon"
+			href="/src/assets/icons/icons8-anime-color-32.png"
+		/>
+		<link
+			type="image/png"
+			sizes="96x96"
+			rel="icon"
+			href="/src/assets/icons/icons8-anime-color-96.png"
+		/>
+		<link
+			type="image/png"
+			sizes="120x120"
+			rel="icon"
+			href="/src/assets/icons/icons8-anime-color-120.png"
+		/>
+		<link
+			type="image/png"
+			sizes="72x72"
+			rel="icon"
+			href="/src/assets/icons/icons8-anime-color-72.png"
+		/>
+		<link
+			type="image/png"
+			sizes="96x96"
+			rel="icon"
+			href="/src/assets/icons/icons8-anime-color-96.png"
+		/>
+		<link
+			type="image/png"
+			sizes="144x144"
+			rel="icon"
+			href="/src/assets/icons/icons8-anime-color-144.png"
+		/>
+		<link
+			type="image/png"
+			sizes="192x192"
+			rel="icon"
+			href="/src/assets/icons/icons8-anime-color-192.png"
+		/>
+		<link
+			type="image/png"
+			sizes="512x512"
+			rel="icon"
+			href="/src/assets/icons/icons8-anime-color-512.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			sizes="57x57"
+			href="/src/assets/icons/icons8-anime-color-57.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			sizes="60x60"
+			href="/src/assets/icons/icons8-anime-color-60.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			sizes="72x72"
+			href="/src/assets/icons/icons8-anime-color-72.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			sizes="76x76"
+			href="/src/assets/icons/icons8-anime-color-76.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			sizes="114x114"
+			href="/src/assets/icons/icons8-anime-color-114.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			sizes="120x120"
+			href="/src/assets/icons/icons8-anime-color-120.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			sizes="144x144"
+			href="/src/assets/icons/icons8-anime-color-144.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			sizes="152x152"
+			href="/src/assets/icons/icons8-anime-color-152.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			sizes="180x180"
+			href="/src/assets/icons/icons8-anime-color-180.png"
+		/>
+		<link
+			color="#26E07F"
+			rel="mask-icon"
+			href="/src/assets/icons/icons8-anime-color-48.svg"
+		/>
+		<meta
+			name="msapplication-square70x70logo"
+			content="/src/assets/icons/icons8-anime-color-70.png"
+		/>
+		<meta
+			name="msapplication-TileImage"
+			content="/src/assets/icons/icons8-anime-color-144.png"
+		/>
+		<meta
+			name="msapplication-square150x150logo"
+			content="/src/assets/icons/icons8-anime-color-150.png"
+		/>
+		<meta
+			name="msapplication-square310x310logo"
+			content="/src/assets/icons/icons8-anime-color-310.png"
+		/>
 		<script>
 			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
 			if (
